--- a/styles.css
+++ b/styles.css
@@ -9,15 +9,12 @@ body {
   font-family: "Poppins", sans-serif;
 }
 
-/* Navbar styles */
-body {
-  margin: 0;
-  font-family: Arial;
-}
-
+/* Navbar */
 .topnav {
   overflow: hidden;
-  background-color: #333;
+  background-color: #2d1429;
+  display: flex;
+  justify-content: center;
 }
 
 .topnav a {
@@ -25,13 +22,13 @@ body {
   display: block;
   color: #f2f2f2;
   text-align: center;
-  padding: 14px 16px;
+  padding: 20px 16px;
   text-decoration: none;
-  font-size: 17px;
+  font-size: 20px;
 }
 
 .active {
-  background-color: #04aa6d;
+  background-color: #cb75d6;
   color: white;
 }
 
@@ -45,11 +42,11 @@ body {
 }
 
 .dropdown .dropbtn {
-  font-size: 17px;
+  font-size: 20px;
   border: none;
   outline: none;
   color: white;
-  padding: 14px 16px;
+  padding: 20px 16px;
   background-color: inherit;
   font-family: inherit;
   margin: 0;
@@ -75,12 +72,12 @@ body {
 
 .topnav a:hover,
 .dropdown:hover .dropbtn {
-  background-color: #555;
+  background-color: #b564f1;
   color: white;
 }
 
 .dropdown-content a:hover {
-  background-color: #ddd;
+  background-color: #b564f1;
   color: black;
 }
 
