--- a/styles.css
+++ b/styles.css
@@ -151,3 +151,33 @@ body {
     text-align: left;
   }
 }
+
+/* Main section of content */
+main {
+  margin: 0 20px;
+  margin-top: 10px;
+}
+
+.main-title {
+  text-align: center;
+  font-size: 35px;
+  padding-bottom: 20px;
+}
+
+.kafka {
+  color: #d83d84;
+}
+
+.blog-container {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+
+.blog {
+  background: #b1aab1;
+  box-shadow: 4px 6px #888888;
+
+  padding: 6px 10px;
+  border-radius: 5px;
+}
