--- a/styles.css
+++ b/styles.css
@@ -152,6 +152,18 @@ body {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .main {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  .side img {
+    width: 150px;
+  }
+}
+
 /* Main section of content */
 main {
   margin: 0 20px;
